--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -16,4 +16,7 @@ html,body {
   background-color: #2f3e51;
   float: left;
   height: 100%;
+    .menu__user{
+      background-color: #253141;
+    }
 }
