Add span name to menu__user

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,7 +1,10 @@
 %div.notification
   %p チャットグループが作成されました。
+
 %div.menu
   %div.menu__user
+    %span#name
+      Yuki Noguchi
   %div.menu__group
 
 %div.main
