--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -18,5 +18,10 @@ html,body {
   height: 100%;
     .menu__user{
       background-color: #253141;
+        span{
+          font-size: 16px;
+          font-weight: bold;
+          color: #ffffff
+        }
     }
 }
