--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -21,7 +21,8 @@ html,body {
         span{
           font-size: 16px;
           font-weight: bold;
-          color: #ffffff
+          color: #ffffff;
+          padding-top: 15px;
         }
     }
 }
