--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -18,7 +18,7 @@ html,body {
   height: 100%;
     .menu__user{
       background-color: #253141;
-        span{
+        h1{
           font-size: 16px;
           font-weight: bold;
           color: #ffffff;
