--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,6 +6,22 @@
     %h1
       Yuki Noguchi
   %div.menu__group
+    %ul
+      %li
+        %div.group-name
+          sample_group1
+        %div.group-message
+          まだメッセージはありません
+      %li
+        %div.group-name
+          sample_group1
+        %div.group-message
+          まだメッセージはありません
+      %li
+        %div.group-name
+          sample_group1
+        %div.group-message
+          まだメッセージはありません
 
 %div.main
   %div.main__header
