--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -12,17 +12,33 @@ html,body {
 }
 
 .menu {
+  color: #ffffff;
   width: 300px;
   background-color: #2f3e51;
   float: left;
   height: 100%;
     .menu__user{
+      padding:0 20px 27px;
       background-color: #253141;
         h1{
           font-size: 16px;
           font-weight: bold;
           color: #ffffff;
-          padding-top: 15px;
+          padding-top: 35px;
         }
     }
+    .menu__group{
+      padding:0 20px 0;
+      margin-top: 20px;
+      .group-name{
+        font-size: 15px;
+        margin-bottom: 5px;
+      }
+      .group-message{
+        font-size: 11px;
+        margin-bottom: 40px;
+      }
+    }
 }
+
+
