--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -2,9 +2,14 @@ html,body {
   height:100%;
   }
 
+p{
+  font-size:16px;
+}
+
 .notification {
   background-color: #38AEF0;
   width: 100%;
+  position: fixed;
   p {
     color: white;
     text-align: center;
@@ -17,6 +22,7 @@ html,body {
   background-color: #2f3e51;
   float: left;
   height: 100%;
+  padding-top: 16px;
     .menu__user{
       padding:0 20px 27px;
       background-color: #253141;
