--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -31,6 +31,9 @@ p{
           font-weight: bold;
           color: #ffffff;
           padding-top: 35px;
+          .icons{
+          float: right;
+          }
         }
     }
     .menu__group{
