--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,6 +5,9 @@
   %div.menu__user
     %h1
       Yuki Noguchi
+      %span.icons
+        %i(class="fa fa-cog" aria-hidden="true")
+        %i(class="fa fa-pencil-square-o" aria-hidden="true")
   %div.menu__group
     %ul
       %li
