Add style to main

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,6 +1,8 @@
+<!-- 通知欄 -->
 %div.notification
   %p チャットグループが作成されました。
 
+<!-- サイドメニュー -->
 %div.menu
   %div.menu__user
     %h1
@@ -26,6 +28,7 @@
         %div.group-message
           まだメッセージはありません
 
+<!-- チャット欄 -->
 %div.main
   %div.main__header
   %div.main__contets
