--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -31,5 +31,9 @@
 <!-- チャット欄 -->
 %div.main
   %div.main__header
-  %div.main__contets
+    %h1
+      sampleグループ
+    %h2
+      Aさん、Bさん
+  %div.main__contents
   %div.main__inputarea
