--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -36,4 +36,25 @@
     %h2
       Aさん、Bさん
   %div.main__contents
+    %div.message
+      %div.main__contents__name
+        yukinoguchi
+      %div.main__contents__time
+        2017年4月27日 06:30:40
+      %div.main__contents__message
+        こんにちは
+    %div.message
+      %div.main__contents__name
+        yukinoguchi
+      %div.main__contents__time
+        2017年4月27日 06:33:01
+      %div.main__contents__message
+        こんにちは
+    %div.message
+      %div.main__contents__name
+        yukinoguchi
+      %div.main__contents__time
+        2017年4月27日 06:40:10
+      %div.main__contents__message
+        こんにちは
   %div.main__inputarea
