--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -58,3 +58,6 @@
       %div.main__contents__message
         こんにちは
   %div.main__inputarea
+    %form
+      %input.text{ type: :text }
+      %input.btn{ type: :submit, value: "Send" }
