--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -1,5 +1,20 @@
 html,body {
-  height:100%;
+  display:-webkit-box;
+  display:-moz-box;
+  display:-ms-box;
+  display:-webkit-flexbox;
+  display:-moz-flexbox;
+  display:-ms-flexbox;
+  display:-webkit-flex;
+  display:-moz-flex;
+  display:-ms-flex;
+  display:flex;
+  -webkit-box-lines:multiple;
+  -moz-box-lines:multiple;
+  -webkit-flex-wrap:wrap;
+  -moz-flex-wrap:wrap;
+  -ms-flex-wrap:wrap;
+  flex-wrap:wrap;
   }
 
 p{
@@ -7,6 +22,7 @@ p{
 }
 
 .notification {
+  z-index: 2;
   background-color: #38AEF0;
   width: 100%;
   position: fixed;
@@ -21,7 +37,6 @@ p{
   width: 260px;
   background-color: #2f3e51;
   float: left;
-  height: 100%;
     .menu__user{
       height :88px;
       padding:0 20px 27px;
@@ -55,10 +70,11 @@ p{
   height: 100%;
   float: right;
   .main__header{
+    position: fixed;
     background-color: white;
     width: calc(100vw - 340px);
     padding:0 40px;
-    border-bottom: #eeeeee;
+    border-bottom: solid #eeeeee;
     h1{
       padding-top: 51px;
       font-size: 20px;
@@ -69,11 +85,22 @@ p{
       font-size: 12px;
       color: #999999;
     }
+    .edit-btn{
+      height: 40px;
+      background-color: white;
+      color: #38aef0;
+      border-color: #38aef0;
+      border: solid;
+      padding: 0 20px;
+      position: absolute;
+      top: 44px;
+      right: 40px;
+      z-index: 1;
+    }
   }
   .main__contents{
     width: calc(100vw - 340px);
-    padding:0 40px;
-    margin-top: 46px;
+    padding:134px 40px 90px;
     .message{
       margin-bottom: 40px;
     }
@@ -97,22 +124,35 @@ p{
   }
   .main__inputarea{
     background-color: #aaaaaa;
-    width: calc(100vw - 340px);
     padding: 20px 40px;
     position: fixed;
     bottom: 0;
-      .text{
-        width: calc(100% - 115px);
-        height: 50px;
+    width: calc(100vw - 340px);
+      .textarea{
         margin: 0 10px;
-        float: left;
+        width: 100%;
+        position: relative;
+        .text{
+          width: calc(100% - 115px);
+          height: 50px;
+          float: left;
+        }
+        .img-btn{
+          font-family: FontAwesome;
+          border: none;
+          position: absolute;
+          right: 125px;
+          top: 20px;
+          background-color: white;
+        }
       }
-      .btn{
+      .send-btn{
         background-color: #38aef0;
         height: 50px;
         width: 75px;
         border: none;
         margin-left: 15px;
+        color: white;
       }
     }
   }
