--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -21,139 +21,8 @@ p{
   font-size:16px;
 }
 
-.notification {
-  z-index: 2;
-  background-color: #38AEF0;
-  width: 100%;
-  position: fixed;
-  p {
-    color: white;
-    text-align: center;
-  }
-}
+@import "./modules/notification";
 
-.menu {
-  color: #ffffff;
-  width: 260px;
-  background-color: #2f3e51;
-  float: left;
-    .menu__user{
-      height :88px;
-      padding:0 20px 27px;
-      background-color: #253141;
-        h1{
-          font-size: 16px;
-          font-weight: bold;
-          color: #ffffff;
-          padding-top: 51px;
-          .icons{
-          float: right;
-          }
-        }
-    }
-    .menu__group{
-      padding:0 20px 0;
-      margin-top: 20px;
-      .group-name{
-        font-size: 15px;
-        margin-bottom: 5px;
-      }
-      .group-message{
-        font-size: 11px;
-        margin-bottom: 40px;
-      }
-    }
-}
+@import "./modules/menu";
 
-.main{
-  background-color: #fafafa;
-  height: 100%;
-  float: right;
-  .main__header{
-    position: fixed;
-    background-color: white;
-    width: calc(100vw - 340px);
-    padding:0 40px;
-    border-bottom: solid #eeeeee;
-    h1{
-      padding-top: 51px;
-      font-size: 20px;
-      color: #333333;
-      margin-bottom: 15px;
-    }
-    h2{
-      font-size: 12px;
-      color: #999999;
-    }
-    .edit-btn{
-      height: 40px;
-      background-color: white;
-      color: #38aef0;
-      border-color: #38aef0;
-      border: solid;
-      padding: 0 20px;
-      position: absolute;
-      top: 44px;
-      right: 40px;
-      z-index: 1;
-    }
-  }
-  .main__contents{
-    width: calc(100vw - 340px);
-    padding:134px 40px 90px;
-    .message{
-      margin-bottom: 40px;
-    }
-      .main__contents__name{
-        font-weight: bold;
-        font-size: 16px;
-        color: #434A54;
-        float: left;
-        margin-right: 10px;
-        margin-bottom: 10px;
-      }
-      .main__contents__time{
-        color: #999999;
-        font-size: 12px;
-      }
-      .main__contents__message{
-        clear: both;
-        font-size: 14px;
-        color: #434A54;
-      }
-  }
-  .main__inputarea{
-    background-color: #aaaaaa;
-    padding: 20px 40px;
-    position: fixed;
-    bottom: 0;
-    width: calc(100vw - 340px);
-      .textarea{
-        margin: 0 10px;
-        width: 100%;
-        position: relative;
-        .text{
-          width: calc(100% - 115px);
-          height: 50px;
-          float: left;
-        }
-        .img-btn{
-          font-family: FontAwesome;
-          border: none;
-          position: absolute;
-          right: 125px;
-          top: 20px;
-          background-color: white;
-        }
-      }
-      .send-btn{
-        background-color: #38aef0;
-        height: 50px;
-        width: 75px;
-        border: none;
-        margin-left: 15px;
-        color: white;
-      }
-    }
-  }
-
+@import "./modules/main";
