--- a/app/assets/stylesheets/modules/_menu.scss
+++ b/app/assets/stylesheets/modules/_menu.scss
@@ -3,6 +3,7 @@
   width: 260px;
   background-color: #2f3e51;
   float: left;
+  height: 100%;
     .menu__user{
       height :88px;
       padding:0 20px 27px;
