Insert blank line to end

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,6 @@
 @import "./reset";
-@import "./style";
+@import "./modules/body";
 @import "font-awesome";
+@import "./modules/notification";
+@import "./modules/menu";
+@import "./modules/main";
