--- a/app/assets/stylesheets/modules/_menu.scss
+++ b/app/assets/stylesheets/modules/_menu.scss
@@ -8,19 +8,23 @@
       height :88px;
       padding:0 20px 27px;
       background-color: #253141;
+      position: fixed;
+      width: 260px;
         h1{
           font-size: 16px;
           font-weight: bold;
           color: #ffffff;
           padding-top: 51px;
+          position: relative;
           .icons{
-          float: right;
+            position: absolute;
+            right: 40px;
           }
         }
     }
     .menu__group{
       padding:0 20px 0;
-      margin-top: 20px;
+      margin-top: 124px;
       .group-name{
         font-size: 15px;
         margin-bottom: 5px;
