--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,5 @@
 @import "./modules/body";
 @import "font-awesome";
 @import "./modules/notification";
-@import "./modules/menu";
-@import "./modules/main";
+@import "./modules/chat-menu";
+@import "./modules/chat-main";
