--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,14 +3,14 @@
   %p チャットグループが作成されました。
 
 <!-- サイドメニュー -->
-%div.menu
-  %div.menu__user
+%div.chat-menu
+  %div.chat-menu__user
     %h1
       Yuki Noguchi
       %span.icons
         %i(class="fa fa-cog" aria-hidden="true")
         %i(class="fa fa-pencil-square-o" aria-hidden="true")
-  %div.menu__group
+  %div.chat-menu__group
     %ul
       %li
         %div.group-name
@@ -29,106 +29,106 @@
           まだメッセージはありません
 
 <!-- チャット欄 -->
-%div.main
-  %div.main__header
+%div.chat-main
+  %div.chat-main__header
     %h1
       sampleグループ
     %h2
       Aさん、Bさん
     %input.edit-btn{ type: :submit, value: "Edit" }
-  %div.main__contents
+  %div.chat-main__contents
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:30:40
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:33:01
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
     %div.message
-      %div.main__contents__name
+      %div.chat-main__contents__name
         yukinoguchi
-      %div.main__contents__time
+      %div.chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.main__contents__message
+      %div.chat-main__contents__message
         こんにちは
-  %div.main__inputarea
+  %div.chat-main__inputarea
     %form
       %div.textarea
         %input.text{ type: :text }
