--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,136 +1,136 @@
 <!-- 通知欄 -->
-%div.notification
+.notification
   %p チャットグループが作成されました。
 
 <!-- サイドメニュー -->
-%div.chat-menu
-  %div.chat-menu__user
+.chat-menu
+  .chat-menu__user
     %h1
       Yuki Noguchi
       %span.icons
         %i(class="fa fa-cog" aria-hidden="true")
         %i(class="fa fa-pencil-square-o" aria-hidden="true")
-  %div.chat-menu__group
+  .chat-menu__group
     %ul
       %li
-        %div.group-name
+        .group-name
           sample_group1
-        %div.group-message
+        .group-message
           まだメッセージはありません
       %li
-        %div.group-name
+        .group-name
           sample_group1
-        %div.group-message
+        .group-message
           まだメッセージはありません
       %li
-        %div.group-name
+        .group-name
           sample_group1
-        %div.group-message
+        .group-message
           まだメッセージはありません
 
 <!-- チャット欄 -->
-%div.chat-main
-  %div.chat-main__header
+.chat-main
+  .chat-main__header
     %h1
       sampleグループ
     %h2
       Aさん、Bさん
     %input.edit-btn{ type: :submit, value: "Edit" }
-  %div.chat-main__contents
-    %div.message
-      %div.chat-main__contents__name
+  .chat-main__contents
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:30:40
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:33:01
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-    %div.message
-      %div.chat-main__contents__name
+    .message
+      .chat-main__contents__name
         yukinoguchi
-      %div.chat-main__contents__time
+      .chat-main__contents__time
         2017年4月27日 06:40:10
-      %div.chat-main__contents__message
+      .chat-main__contents__message
         こんにちは
-  %div.chat-main__inputarea
+  .chat-main__inputarea
     %form
-      %div.textarea
+      .textarea
         %input.text{ type: :text }
         %input.img-btn{ type: :submit, value: "&#xf03e;".html_safe }
       %input.send-btn{ type: :submit, value: "Send" }
