--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "./reset";
-@import "./modules/body";
 @import "font-awesome";
 @import "./modules/notification";
 @import "./modules/chat-menu";
 @import "./modules/chat-main";
+@import "./modules/user"
