Add link to user_edit_path

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,7 +7,8 @@
     %h1
       Yuki Noguchi
       %span.icons
-        %i(class="fa fa-cog" aria-hidden="true")
+        = link_to "/users/#{current_user.id}/edit" do
+          %i(class="fa fa-cog" aria-hidden="true")
         %i(class="fa fa-pencil-square-o" aria-hidden="true")
   .chat-menu__group
     %ul
@@ -25,7 +26,7 @@
         .group-name
           sample_group1
         .group-message
-          まだメッセージはありません
+          = current_user.id
 
 <!-- チャット欄 -->
 .chat-main
