--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,7 +7,7 @@
     %h1
       Yuki Noguchi
       %span.icons
-        = link_to "/users/#{current_user.id}/edit" do
+        = link_to "/users/edit" do
           %i(class="fa fa-cog" aria-hidden="true")
         %i(class="fa fa-pencil-square-o" aria-hidden="true")
   .chat-menu__group
