--- a/app/views/layouts/_notification.html.haml
+++ b/app/views/layouts/_notification.html.haml
@@ -1,6 +1,3 @@
 .notification
-  %p
-    = flash[:notice]
-  %p
-    = flash[:alert]
-
+  - flash.each do |key, value|
+    = content_tag :div, value, class: "alert alert-#{key}"
