Re-set group css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,5 @@
 @import "./modules/notification";
 @import "./modules/chat-menu";
 @import "./modules/chat-main";
-@import "./modules/user"
-@import "./modules/group"
+@import "./modules/user";
+@import "./modules/group";
