--- a/app/views/groups/_submit.haml
+++ b/app/views/groups/_submit.haml
@@ -1,4 +1,4 @@
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
-      .chat-group-form__field--right
-        %input.chat-group-form__action-btn{"data-disable-with" => "Save", :name => "commit", :type => "submit", :value => "Save"}/
+.chat-group-form__field.clearfix
+  .chat-group-form__field--left
+  .chat-group-form__field--right
+    = f.submit "Save", data: { disable_with: "Save" }, class: 'chat-group-form__action-btn'
