Add link to new_group_path

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,7 +6,8 @@
       %span.icons
         = link_to edit_user_registration_path do
           %i.fa.fa-cog
-        %i.fa.fa-pencil-square-o
+        = link_to new_group_path do
+          %i.fa.fa-pencil-square-o
   .chat-menu__group
     %ul
       %li
