--- a/app/views/groups/_add-member.html.haml
+++ b/app/views/groups/_add-member.html.haml
@@ -1,6 +1,6 @@
 .chat-group-form__field.clearfix
   .chat-group-form__field--left
-    = f.label :chat_group_name, "グループ名", class: 'chat-group-form__label'
+    = f.label :name, "グループ名", class: 'chat-group-form__label'
   .chat-group-form__field--right
     = f.text_field :name, placeholder: "グループ名を入力してください", id: 'chat_group_name', class: 'chat-group-form__input'
 .chat-group-form__field.clearfix
@@ -8,7 +8,8 @@
     = f.label :chat_group, "チャットメンバーを追加", class: 'chat-group-form__label'
   .chat-group-form__field--right
     .chat-group-form__search.clearfix
-      = f.text_field :name, placeholder: "追加したいユーザー名を入力してください", id: 'user-search-field', class: 'chat-group-form__input'
+      -# = f.text_field :name, placeholder: "追加したいユーザー名を入力してください", id: 'user-search-field', class: 'chat-group-form__input'
+      = f.collection_check_boxes(:user_ids, @user, :id, :name)
     #user-search-result
 .chat-group-form__field.clearfix
   .chat-group-form__field--left
