--- a/app/assets/stylesheets/modules/_chat-body.scss
+++ b/app/assets/stylesheets/modules/_chat-body.scss
@@ -1,5 +1,5 @@
 html,body {
-  min-height: 100%;
+  width: 100%;
   display:-webkit-box;
   display:-moz-box;
   display:-ms-box;
@@ -17,6 +17,10 @@ html,body {
   -ms-flex-wrap:wrap;
   flex-wrap:wrap;
   }
+
+.wrapper{
+  min-height: 100%;
+}
 
 p{
   font-size:16px;
