--- a/app/assets/stylesheets/modules/_group.scss
+++ b/app/assets/stylesheets/modules/_group.scss
@@ -42,7 +42,7 @@
   .chat-group-form__field {
     margin-top: 30px;
 
-    &.chat-group-form__field--left {
+    .chat-group-form__field--left {
       float: left;
       width: 30%;
       padding-right: 20px;
@@ -50,19 +50,19 @@
       box-sizing: border-box;
     }
 
-    &.chat-group-form__field--right {
+    .chat-group-form__field--right {
       float: right;
       width: 70%;
     }
 
-    &.chat-group-form__label {
+    .chat-group-form__label {
       display: block;
       line-height: 50px;
       font-weight: bold;
       text-align: right;
     }
 
-    &.chat-group-form__input {
+    .chat-group-form__input {
       float: left;
       width: 100%;
       line-height: 30px;
@@ -103,4 +103,10 @@
     background-color: #38aef0;
     border: 0;
   }
+}
+
+.clearfix:after{
+  clear: both;
+  content: "";
+  display: block;
 }
