--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -2,8 +2,9 @@
   %h1 新規チャットグループ
   = form_for @group, id: 'new_chat_group', class: 'new_chat_group' do |f|
     = render "groups/add-member", f: f
-    .chat-group-form__field--right
-      #chat-group-users
-        #chat-group-user-22.chat-group-user.clearfix
-          %p.chat-group-user__name seo_kyohei
+    -# .chat-group-form__field--right
+    -#   #chat-group-users
+    -#     -# #chat-group-user-22.chat-group-user.clearfix
+    -#     -#   %p.chat-group-user__name
+    -#     -#     = current_user.name
     = render 'groups/submit', f: f
