--- a/app/views/groups/_add-member.html.haml
+++ b/app/views/groups/_add-member.html.haml
@@ -13,6 +13,6 @@
         = collection_check_boxes(:group, :user_ids, @users, :id, :name) do |t|
           - t.label { t.check_box + t.text }
     #user-search-result
-.chat-group-form__field.clearfix
-  .chat-group-form__field--left
-    = f.label :chat_group, "チャットメンバー", class: 'chat-group-form__label'
+-# .chat-group-form__field.clearfix
+-#   .chat-group-form__field--left
+-#     = f.label :chat_group, "チャットメンバー", class: 'chat-group-form__label'
