--- a/app/views/groups/_add-member.html.haml
+++ b/app/views/groups/_add-member.html.haml
@@ -9,6 +9,6 @@
   .chat-group-form__field--right
     .chat-group-form__search.clearfix
       #user-search-field.chat-group-form__input
-        = collection_check_boxes(:group, :user_ids, @users, :id, :name) do |t|
+        = collection_check_boxes(:group, :user_ids, User.all, :id, :name) do |t|
           - t.label { t.check_box + t.text }
     #user-search-result
