--- a/app/assets/stylesheets/modules/_chat-body.scss
+++ b/app/assets/stylesheets/modules/_chat-body.scss
@@ -1,25 +1,10 @@
 html,body {
   width: 100%;
-  display:-webkit-box;
-  display:-moz-box;
-  display:-ms-box;
-  display:-webkit-flexbox;
-  display:-moz-flexbox;
-  display:-ms-flexbox;
-  display:-webkit-flex;
-  display:-moz-flex;
-  display:-ms-flex;
-  display:flex;
-  -webkit-box-lines:multiple;
-  -moz-box-lines:multiple;
-  -webkit-flex-wrap:wrap;
-  -moz-flex-wrap:wrap;
-  -ms-flex-wrap:wrap;
-  flex-wrap:wrap;
   }
 
 .wrapper{
   min-height: 100%;
+  position: relative;
 }
 
 p{
