--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,126 +1,4 @@
 .wrapper
-  <!-- サイドメニュー -->
-  .chat-menu
-    .chat-menu__user
-      %h1
-        = current_user.name
-        %span.icons
-          = link_to edit_user_registration_path do
-            %i.fa.fa-cog
-          = link_to new_group_path do
-            %i.fa.fa-pencil-square-o
-    .chat-menu__group
-      %ul
-        - @groups.each do |group|
-          %li
-            .group-name
-              = group.name
-            .group-message
-              まだ投稿はありません
+  = render 'layouts/chat-menu'
+  = render 'layouts/chat-main'
 
-  <!-- チャット欄 -->
-  .chat-main
-    .chat-main__header
-      %h1
-        sampleグループ
-      %h2
-        Aさん、Bさん
-      %input.edit-btn{ type: :submit, value: "Edit" }
-    .chat-main__contents
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:30:40
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:33:01
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-      .message
-        .chat-main__contents__name
-          yukinoguchi
-        .chat-main__contents__time
-          2017年4月27日 06:40:10
-        .chat-main__contents__message
-          こんにちは
-    .chat-main__inputarea
-      %form
-        .textarea
-          %input.text{ type: :text }
-          %input.img-btn{ type: :submit, value: "&#xf03e;".html_safe }
-        %input.send-btn{ type: :submit, value: "Send" }
